force-app/main/default/objects/Visit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>MICE</fullName>
            </value>
            <value>
                <fullName>Drop-In</fullName>
            </value>
            <value>
                <fullName>Invite by VR chairman</fullName>
            </value>
            <value>
                <fullName>Invite by VR Management</fullName>
            </value>
            <value>
                <fullName>Invite by brand</fullName>
            </value>
            <value>
                <fullName>VIP Shopping Day</fullName>
            </value>
            <value>
                <fullName>Tourism</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Action / Charity</fullName>
            </value>
            <value>
                <fullName>1 to 1 Personal Shopping Appointment</fullName>
            </value>
            <value>
                <fullName>Group Personal Shopping Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>