force-app/main/default/objects/Visit__c/fields/Units_How_many_pieces__c.field-meta.xml
<CustomField>
    <fullName>Units_How_many_pieces__c</fullName>
    <label>Units (How many pieces?)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>