force-app/main/default/objects/Visit__c/fields/Vehicle_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration_Number__c</fullName>
    <description>The registration number for the vehicle in which the guests arrived</description>
    <inlineHelpText>The registration number for the vehicle in which the guests arrived</inlineHelpText>
    <label>Vehicle Registration Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>