force-app/main/default/objects/Visit__c/fields/Village_Specific__c.field-meta.xml
<CustomField>
    <fullName>Village_Specific__c</fullName>
    <inlineHelpText>Enter name of Village incentive that resulted in this VIP Account being created.</inlineHelpText>
    <label>Village Specific</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LVV Prestige</fullName>
            </value>
            <value>
                <fullName>FV Exclusive</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>