force-app/main/default/objects/Visit__c/fields/VIP_Cards_Exchanged__c.field-meta.xml
<CustomField>
    <fullName>VIP_Cards_Exchanged__c</fullName>
    <label>VIP Cards Exchanged</label>
    <summaryForeignKey>VIP_Card_Exchange__c.Visit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>