force-app/main/default/objects/Visit__c/fields/VIP_Cards_No_Guests__c.field-meta.xml
<CustomField>
    <fullName>VIP_Cards_No_Guests__c</fullName>
    <formula>IF( VIP_Cards_Exchanged__c &gt;  Number_of_Guests__c , true, false)</formula>
    <label>VIP Cards &gt; No. Guests</label>
    <type>Checkbox</type>
</CustomField>