force-app/main/default/objects/Visit__c/fields/VIP_Parking__c.field-meta.xml
<CustomField>
    <fullName>VIP_Parking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP Parking</label>
    <type>Checkbox</type>
</CustomField>