force-app/main/default/objects/Visit__c/fields/Virtual_Visit__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark as TRUE if Visit was virtual and Guest was not present in village</inlineHelpText>
    <label>Virtual Visit?</label>
    <type>Checkbox</type>
</CustomField>