force-app/main/default/objects/Visit__c/fields/Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date_Time__c</fullName>
    <label>Check In Date/Time</label>
    <type>DateTime</type>
</CustomField>