force-app/main/default/objects/Visit__c/fields/Visit_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_External_ID__c</fullName>
    <description>an external identifier for data load</description>
    <externalId>true</externalId>
    <inlineHelpText>an external identifier for data load</inlineHelpText>
    <label>Visit External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>