force-app/main/default/objects/Visit__c/fields/Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Visit_Notes__c</fullName>
    <inlineHelpText>Do NOT add any personal data in this field.</inlineHelpText>
    <label>Visit Notes</label>
    <type>TextArea</type>
</CustomField>