force-app/main/default/objects/Visit__c/fields/Visit_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Visit_Record_Types__c</fullName>
    <description>Picklist with all Visit Record Type API names.</description>
    <label>Visit Record Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Personal_Shopping_Visit</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>VIP_Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>