force-app/main/default/objects/Visit__c/fields/Visit_Source_Notes__c.field-meta.xml
<CustomField>
    <fullName>Visit_Source_Notes__c</fullName>
    <inlineHelpText>Capture any additional Source details here.</inlineHelpText>
    <label>Visit Source Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>