force-app/main/default/objects/Visit__c/fields/Walk_in_Booked__c.field-meta.xml
<CustomField>
    <fullName>Walk_in_Booked__c</fullName>
    <label>Walk in / Booked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walk in</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>