force-app/main/default/objects/Visit__c/recordTypes/Personal_Shopping_Visit.recordType-meta.xml
<RecordType>
    <fullName>Personal_Shopping_Visit</fullName>
    <active>true</active>
    <label>Personal Shopping Visit</label>
</RecordType>