force-app/main/default/objects/Visit__c/recordTypes/VIP_Visit.recordType-meta.xml
<RecordType>
    <fullName>VIP_Visit</fullName>
    <active>true</active>
    <description>When a VIP Guest visits a village</description>
    <label>VIP Visit</label>
</RecordType>