force-app/main/default/objects/Visit__c/validationRules/Brand_Event_Validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Brand_Event_Validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( Brand_Event__c ),
TEXT( Visit_Source__c )==&apos;Brand_Event&apos;
)</errorConditionFormula>
    <errorDisplayField>Brand_Event__c</errorDisplayField>
    <errorMessage>If Visit Source is Brand Event then Brand Event Field is Mandatory.</errorMessage>
</ValidationRule>