force-app/main/default/objects/Visit__c/validationRules/Brand_Referral_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Brand_Referral_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(  Brand_Referral__c  ),
TEXT( Visit_Source__c )==&apos;Brand_Referral&apos;
)</errorConditionFormula>
    <errorDisplayField>Brand_Referral__c</errorDisplayField>
    <errorMessage>If Visit Source is Brand Referral then Brand Referral Field is Mandatory.</errorMessage>
</ValidationRule>