force-app/main/default/objects/Visit__c/validationRules/Marketing_Activity_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Marketing_Activity_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(  Marketing_Activity__c  ),
TEXT( Visit_Source__c )==&apos;Marketing_Activity&apos;
)</errorConditionFormula>
    <errorDisplayField>Marketing_Activity__c</errorDisplayField>
    <errorMessage>If Visit Source is Marketing Activity then Marketing Activity Field is Mandatory.</errorMessage>
</ValidationRule>