force-app/main/default/objects/Visit__c/validationRules/Personal_Shopper_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Personal_Shopper_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(  Personal_Shopper__c  ),
TEXT( Visit_Source__c )==&apos;Personal_Shopper&apos;
)</errorConditionFormula>
    <errorDisplayField>Personal_Shopper__c</errorDisplayField>
    <errorMessage>If Visit Source is Personal Shopper then Personal Shopper Field is Mandatory.</errorMessage>
</ValidationRule>