force-app/main/default/objects/Visit__c/validationRules/Pre_Booked_Mandatory_Expected_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Booked_Mandatory_Expected_Date</fullName>
    <active>true</active>
    <description>When Walk in/Booked field is Booked the Expected Date of Arrival are mandatory.</description>
    <errorConditionFormula>AND(  ISPICKVAL( Walk_in_Booked__c , &apos;Booked&apos;) , 
      ISBLANK(Arrival_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Arrival_Date__c</errorDisplayField>
    <errorMessage>This field has to be populated for Booked visits</errorMessage>
</ValidationRule>