force-app/main/default/objects/Visit__c/validationRules/Pre_Booked_Mandatory_Expected_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Booked_Mandatory_Expected_Time</fullName>
    <active>true</active>
    <description>When Walk in/Booked field is Booked the Expected Time of Arrival are mandatory.</description>
    <errorConditionFormula>AND(  ISPICKVAL( Walk_in_Booked__c , &apos;Booked&apos;) , 
      ISBLANK(Expected_Time_of_Arrival__c)
)</errorConditionFormula>
    <errorDisplayField>Expected_Time_of_Arrival__c</errorDisplayField>
    <errorMessage>This field has to be populated for Booked visits</errorMessage>
</ValidationRule>