force-app/main/default/objects/Visit__c/validationRules/Private_Client_Team_Validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Private_Client_Team_Validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(  Private_Client_Team__c  ),
TEXT( Visit_Source__c )==&apos;Private_Clients_Team&apos;
)</errorConditionFormula>
    <errorDisplayField>Private_Client_Team__c</errorDisplayField>
    <errorMessage>If Visit Source is Private Clients Team then Private Client Team Field is Mandatory.</errorMessage>
</ValidationRule>