force-app/main/default/objects/Visit__c/validationRules/Village_Specific_Validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Village_Specific_Validation_rule</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
ISBLANK(TEXT( Village_Specific__c )),
TEXT(  Visit_Source__c  )==&apos;Village_Specific&apos;

)</errorConditionFormula>
    <errorDisplayField>Village_Specific__c</errorDisplayField>
    <errorMessage>If Visit Source is Membership then Village Specific Field is Mandatory.</errorMessage>
</ValidationRule>