force-app/main/default/objects/Visit__c/validationRules/Visit_Source_is_Private_Client_Team.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Source_is_Private_Client_Team</fullName>
    <active>true</active>
    <description>If visit source has one the private client team values then this field has to be populated.</description>
    <errorConditionFormula>AND(
 OR(
  ISPICKVAL(Visit_Source__c, &apos;P/C - Apartment (BV Only)&apos;), 
  ISPICKVAL(Visit_Source__c, &apos;P/C - PR (BV Only)&apos;),
  ISPICKVAL(Visit_Source__c, &apos;P/C - Tourism (BV Only)&apos;)) 
 ,
 ISBLANK(Private_Client_Team__c) 
)</errorConditionFormula>
    <errorDisplayField>Private_Client_Team__c</errorDisplayField>
    <errorMessage>This field has to be populated</errorMessage>
</ValidationRule>