force-app/main/default/objects/Visit__c/validationRules/Visit_Source_Membership_required_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Source_Membership_required_field</fullName>
    <active>true</active>
    <description>If Visit Source has the membership value, then Village Specific has to be populated</description>
    <errorConditionFormula>AND(
   ISPICKVAL( Visit_Source__c , &apos;Village_Specific&apos;) , 
   ISBLANK(  TEXT(Village_Specific__c))
)</errorConditionFormula>
    <errorDisplayField>Village_Specific__c</errorDisplayField>
    <errorMessage>This field must be populated</errorMessage>
</ValidationRule>