force-app/main/default/objects/Visit__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Visit__c.Personal_Shopping_Visit,Visit__c.VIP_Visit</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>