force-app/main/default/objects/Visit__c/listViews/All_BV_Visits_This_Week.listView-meta.xml
<ListView>
    <fullName>All_BV_Visits_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>VIP_Cards_Exchanged__c</columns>
    <columns>Visit_Date_Time__c</columns>
    <columns>Mode_of_Transport__c</columns>
    <columns>Location__c</columns>
    <columns>Type__c</columns>
    <columns>Country_of_Origin__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Visit_Notes__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visit_Date_Time__c</field>
        <operation>equals</operation>
        <value>1/13/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Bicester</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Visit__c.Personal_Shopping_Visit,Visit__c.VIP_Visit</value>
    </filters>
    <label>All BV Visits This Week</label>
    <language>en_US</language>
</ListView>