force-app/main/default/objects/Visit__c/listViews/All_Visits_Today_LVV.listView-meta.xml
<ListView>
    <fullName>All_Visits_Today_LVV</fullName>
    <columns>NAME</columns>
    <columns>Partnership_Promotion__c</columns>
    <columns>Booking_Partnership_Type__c</columns>
    <columns>Booking_Partnership_Name__c</columns>
    <columns>Group_Booking__c</columns>
    <columns>VIP_Cards_Exchanged__c</columns>
    <columns>Visit_Date_Time__c</columns>
    <columns>Check_Out_Date_Time__c</columns>
    <columns>Mode_of_Transport__c</columns>
    <columns>Location__c</columns>
    <columns>Type__c</columns>
    <columns>Country_of_Origin__c</columns>
    <columns>Village__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Visit_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visit_Date_Time__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>La Vallée</value>
    </filters>
    <label>All Visits Today - LVV</label>
    <language>en_US</language>
</ListView>