force-app/main/default/objects/Visit__c/listViews/Change_to_MICE.listView-meta.xml
<ListView>
    <fullName>Change_to_MICE</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Village__c</columns>
    <columns>Visit_Date_Time__c</columns>
    <columns>Type__c</columns>
    <columns>Partnership_Promotion__c</columns>
    <columns>Check_Out_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partnership_Promotion__c</field>
        <operation>equals</operation>
        <value>MWC18 Chauffeurs</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>MICE</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Visit__c.Standard</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>La Roca</value>
    </filters>
    <label>LRV Visits_ Change to MICE</label>
    <language>en_US</language>
</ListView>